ApiGateways/ApiGateway/ocelotapigateway-k8s/ocelotapigateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocelotapigateway
  namespace: onaimhub
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 8080
  selector:
    app: ocelotapigateway
  type: ClusterIP
  # selector:
  #   io.kompose.service: ocelotapigateway
