ApiGateways/ApiGateway/ocelotapigateway-k8s/ocelotapigateway-ingerss.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ocelotapigateway-ingress
  namespace: onaimhub
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Set to "true" if SSL is configured
spec:
  ingressClassName: nginx
  rules:
    - host: onaim.ocelotapigateway.dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ocelotapigateway
                port:
                  number: 5000
